--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@ body
 	margin-top: 100px;
 }
 
-input[type=number]
+input[type=number],
+input[type=text]
 {
 	width: 300px;
 	box-sizing: border-box;
